added support for webhook validation in addition to sending signed requests.

--- a/src/Cirreum.Authorization.SignedRequest.Client/Cirreum.Authorization.SignedRequest.Client.csproj
+++ b/src/Cirreum.Authorization.SignedRequest.Client/Cirreum.Authorization.SignedRequest.Client.csproj
@@ -2,8 +2,12 @@
 
 	<PropertyGroup>
 		<RootNamespace>Cirreum.Authorization.SignedRequest</RootNamespace>
-		<Description>Client SDK for HMAC signed request authentication. Use this package to sign HTTP requests for APIs that require signed request authentication.</Description>
-		<PackageTags>cirreum;authorization;signed request;hmac;client;http</PackageTags>
+		<Description>Client SDK for HMAC signed request authentication. Sign outgoing HTTP requests and validate incoming webhooks with HMAC-SHA256 signatures.</Description>
+		<PackageTags>cirreum;authorization;signed request;hmac;client;http;webhook</PackageTags>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
 </Project>
